syntax = "proto3";
package product;

option go_package = "CodeMart/proto/product;productpb";

message Empty {}

service ProductService {
  rpc GetAllProducts (Empty) returns (ProductList);
  rpc GetProductById (ProductIdRequest) returns (Product);
  rpc GetProductsByTag (TagRequest) returns (ProductList);
}

message Product {
  int32 id = 1;
  string name = 2;
  float price = 3;
  repeated string tags = 4; // halal, vegan, etc.
}

message ProductList {
  repeated Product products = 1;
}

message ProductIdRequest {
  int32 product_id = 1;
}

message TagRequest {
  string tag = 1;
}
